frame/support/test/tests/pallet_ui/dev_mode_without_arg_default_hasher.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for type aliases
  --> tests/pallet_ui/dev_mode_without_arg_default_hasher.rs:21:47
   |
21 |     type MyStorageMap<T: Config> = StorageMap<_, _, u32, u64>;
   |                                                  ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for type aliases
  --> tests/pallet_ui/dev_mode_without_arg_default_hasher.rs:24:59
   |
24 |     type MyStorageDoubleMap<T: Config> = StorageDoubleMap<_, _, u32, _, u64, u64>;
   |                                                              ^       ^ not allowed in type signatures
   |                                                              |
   |                                                              not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for type aliases
  --> tests/pallet_ui/dev_mode_without_arg_default_hasher.rs:27:61
   |
27 |     type MyCountedStorageMap<T: Config> = CountedStorageMap<_, _, u32, u64>;
   |                                                                ^ not allowed in type signatures
